# bioinf2015

./: benchmark results.txt
implementation-team1/: .gitignore  CMakeLists.txt  README.md  SimdMultiarch.cmake
implementation-team1/Celero-1.2.0/: CMakeLists.txt
implementation-team1/include/: mlalign.h
implementation-team1/src/: indexers.h  indexingspec.js  main.cpp  mlalign.cpp  optionparser.h  simdwrapper.h
implementation-team1/tests/: benchmark.cpp  run_tests.py
implementation-team1/tests/sequences/: RAG2_unaligned.fas
implementation-team2/: CMakeLists.txt  DEPENDENCY_INSTALL.txt  README.md
implementation-team2/crlibm-1.0beta4/: Makefile  config.status
implementation-team2/crlibm-1.0beta4/.deps/: asincos.Po  atan_accurate.Po  atan_fast.Po  crlibm_private.Po  csh_fast.Po  exp-td-standalone.Po  exp-td.Po  expm1-standalone.Po  expm1.Po  log-de.Po  log10-td.Po  log1p.Po  log2-td.Po  pow.Po  rem_pio2_accurate.Po  trigo_accurate.Po  trigo_fast.Po  trigpi.Po  triple-double.Po
implementation-team2/crlibm-1.0beta4/scs_lib/: Makefile
implementation-team2/crlibm-1.0beta4/scs_lib/.deps/: addition_scs.Po  division_scs.Po  double2scs.Po  multiplication_scs.Po  print_scs.Po  scs2double.Po  scs2mpfr.Po  scs_private.Po  zero_scs.Po
implementation-team2/crlibm-1.0beta4/tests/: Makefile
implementation-team2/crlibm-1.0beta4/tests/.deps/: blind_test.Po  generate_test_vectors.Po  soak_test.Po  test_common.Po  test_perf.Po  test_val.Po
implementation-team2/doc/: sequences
implementation-team2/src/: TKF91Sequential.cpp
implementation-team2/src/log_caching_round_up/: Main.cpp  Makefile  TKF91Sequential.h
implementation-team2/tests/: benchmark.cpp
implementation-team2/tests/sequences/: BDNF_unaligned.fas  RAG1_unaligned.fas  RBP3_unaligned.fas  cytb_unaligned.fas  vWF_unaligned.fas
paper/: mlalign.aux  mlalign.bib  mlalign.dvi  mlalign.ps  mlalign.tex  mlalign.tex~
paper/team1/mlalign/: mlalign.bib
paper/team2/TKF91_optimization_Sarah_Pierre/: optimization.tex  tkf.bib
